--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <a-entity id="rig" position="0 1.6 3">
       <a-camera wasd-controls="acceleration: 25">
         <a-entity cursor="fuse: true; fuseTimeout: 900"
+                  raycaster="objects: .clickable"
                   position="0 0 -1"
                   geometry="primitive: ring; radiusInner: 0.01; radiusOuter: 0.015"
                   material="color: white; shader: flat"></a-entity>
