--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
     </a-entity>
 
     <a-entity id="click-handler"></a-entity>
+
+    <!-- WebXR Hand Tracking (if supported by device/browser) -->
+    <a-entity id="leftHand"  hand-tracking-controls="hand: left"></a-entity>
+    <a-entity id="rightHand" hand-tracking-controls="hand: right"></a-entity>
+
   </a-scene>
 
   <button class="btn" onclick="document.querySelector('a-scene').enterVR()">Enter VR</button>
