--- a/index.html
+++ b/index.html
@@ -42,38 +42,38 @@
 
     <!-- Splash -->
     <a-entity id="ui-splash" visible="true" position="0 1.6 -1.6">
-      <a-plane width="2.0" height="1.1" color="#162235" material="opacity:0.95"></a-plane>
-      <a-text value="Healthy Hero VR: Dance!" color="#fff" width="1.8" align="center" position="0 0.35 0"></a-text>
-      <a-text value="Tap or gaze to continue" color="#bcd" width="1.6" align="center" position="0 0.08 0"></a-text>
-      <a-plane id="btn-continue" class="clickable" width="1.2" height="0.22" color="#4ade80" position="0 -0.24 0">
-        <a-text value="CONTINUE" align="center" color="#063" width="1.0" position="0 0 0.01"></a-text>
+      <a-plane width="2.0" height="1.1" color="#162235" material="opacity:0.95; depthTest:false; transparent:true"></a-plane>
+      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Healthy Hero VR: Dance!" color="#fff" width="1.8" align="center" position="0 0.35 0.03"></a-text>
+      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Tap or gaze to continue" color="#bcd" width="1.6" align="center" position="0 0.08 0.03"></a-text>
+      <a-plane id="btn-continue" class="clickable" width="1.2" height="0.22" color="#4ade80" position="0 -0.24 0.03" material="depthTest:false; transparent:true">
+        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="CONTINUE" align="center" color="#063" width="1.0" position="0 0 0.01"></a-text>
       </a-plane>
     </a-entity>
 
     <!-- Menu -->
     <a-entity id="ui-menu" visible="false" position="0 1.6 -1.6">
-      <a-plane width="2.2" height="1.3" color="#162235" material="opacity:0.95"></a-plane>
-      <a-text value="Dance Game Menu" color="#fff" width="1.8" align="center" position="0 0.45 0"></a-text>
+      <a-plane width="2.2" height="1.3" color="#162235" material="opacity:0.95; depthTest:false; transparent:true"></a-plane>
+      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Dance Game Menu" color="#fff" width="1.8" align="center" position="0 0.45 0.03"></a-text>
 
-      <a-plane id="btn-play" class="clickable" width="1.5" height="0.24" color="#60a5fa" position="0 0.14 0">
-        <a-text value="Start Game (Timer)" align="center" color="#062" width="1.2" position="0 0 0.01"></a-text>
+      <a-plane id="btn-play" class="clickable" width="1.5" height="0.24" color="#60a5fa" position="0 0.14 0.03" material="depthTest:false; transparent:true">
+        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Start Game (Timer)" align="center" color="#062" width="1.2" position="0 0 0.01"></a-text>
       </a-plane>
-      <a-plane id="btn-practice" class="clickable" width="1.5" height="0.24" color="#86efac" position="0 -0.16 0">
-        <a-text value="Practice Mode (No Timer)" align="center" color="#063" width="1.2" position="0 0 0.01"></a-text>
+      <a-plane id="btn-practice" class="clickable" width="1.5" height="0.24" color="#86efac" position="0 -0.16 0.03" material="depthTest:false; transparent:true">
+        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Practice Mode (No Timer)" align="center" color="#063" width="1.2" position="0 0 0.01"></a-text>
       </a-plane>
-      <a-plane id="btn-howto" class="clickable" width="1.5" height="0.24" color="#fde68a" position="0 -0.46 0">
-        <a-text value="How to Play" align="center" color="#6b4005" width="1.2" position="0 0 0.01"></a-text>
+      <a-plane id="btn-howto" class="clickable" width="1.5" height="0.24" color="#fde68a" position="0 -0.46 0.03" material="depthTest:false; transparent:true">
+        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="How to Play" align="center" color="#6b4005" width="1.2" position="0 0 0.01"></a-text>
       </a-plane>
     </a-entity>
 
     <!-- How-To -->
     <a-entity id="ui-howto" visible="false" position="0 1.6 -1.6">
-      <a-plane width="2.2" height="1.3" color="#162235" material="opacity:0.95"></a-plane>
-      <a-text value="How to Play" color="#fff" width="1.8" align="center" position="0 0.45 0"></a-text>
-      <a-text value="Music plays. Arrows fly to targets. Look at a target (⬆⬇⬅➡) and tap right on beat: Perfect/Good/Miss → Score and combo!"
-               color="#cfe" width="1.9" position="-1.05 0.15 0"></a-text>
-      <a-plane id="btn-back-menu" class="clickable" width="1.0" height="0.22" color="#93c5fd" position="0 -0.46 0">
-        <a-text value="Back" align="center" color="#063" width="0.8" position="0 0 0.01"></a-text>
+      <a-plane width="2.2" height="1.3" color="#162235" material="opacity:0.95; depthTest:false; transparent:true"></a-plane>
+      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="How to Play" color="#fff" width="1.8" align="center" position="0 0.45 0.03"></a-text>
+      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Music plays. Arrows fly to targets. Look at a target (⬆⬇⬅➡) and tap right on beat: Perfect/Good/Miss → Score and combo!"
+               color="#cfe" width="1.9" position="-1.05 0.15 0.03"></a-text>
+      <a-plane id="btn-back-menu" class="clickable" width="1.0" height="0.22" color="#93c5fd" position="0 -0.46 0.03" material="depthTest:false; transparent:true">
+        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Back" align="center" color="#063" width="0.8" position="0 0 0.01"></a-text>
       </a-plane>
     </a-entity>
 
@@ -81,19 +81,19 @@
     <a-entity id="hud" visible="false">
       <a-entity id="hud-panel" position="0 2.4 -1.9">
         <a-plane width="1.8" height="0.3" color="#0b1220" material="opacity:0.8"></a-plane>
-        <a-text id="hud-left" value="Time: 60" color="#bfe" width="1.0" position="-0.8 0 0.01"></a-text>
-        <a-text id="hud-mid" value="Combo: 0" color="#bfe" width="0.6" align="center" position="0 0 0.01"></a-text>
-        <a-text id="hud-right" value="Score: 0" color="#bfe" width="1.0" align="right" position="0.8 0 0.01"></a-text>
+        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" id="hud-left" value="Time: 60" color="#bfe" width="1.0" position="-0.8 0 0.01"></a-text>
+        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" id="hud-mid" value="Combo: 0" color="#bfe" width="0.6" align="center" position="0 0 0.01"></a-text>
+        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" id="hud-right" value="Score: 0" color="#bfe" width="1.0" align="right" position="0.8 0 0.01"></a-text>
       </a-entity>
     </a-entity>
 
     <!-- Target Lanes -->
     <a-entity id="arena" visible="false" position="0 1.6 -2.6">
       <!-- Hit zones -->
-      <a-plane id="lane-up" class="lane clickable" width="0.6" height="0.18" color="#13233a" position="0 0.6 0"></a-plane>
-      <a-plane id="lane-left" class="lane clickable" width="0.6" height="0.18" color="#13233a" position="-0.8 0.2 0"></a-plane>
-      <a-plane id="lane-right" class="lane clickable" width="0.6" height="0.18" color="#13233a" position="0.8 0.2 0"></a-plane>
-      <a-plane id="lane-down" class="lane clickable" width="0.6" height="0.18" color="#13233a" position="0 -0.2 0"></a-plane>
+      <a-plane id="lane-up" class="lane clickable" width="0.6" height="0.18" color="#13233a" position="0 0.6 0.03"></a-plane>
+      <a-plane id="lane-left" class="lane clickable" width="0.6" height="0.18" color="#13233a" position="-0.8 0.2 0.03"></a-plane>
+      <a-plane id="lane-right" class="lane clickable" width="0.6" height="0.18" color="#13233a" position="0.8 0.2 0.03"></a-plane>
+      <a-plane id="lane-down" class="lane clickable" width="0.6" height="0.18" color="#13233a" position="0 -0.2 0.03"></a-plane>
 
       <!-- Lane labels -->
       <a-image src="#arrowUpImg" position="0 0.6 0.01" width="0.16" height="0.16"></a-image>
