--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
-  <title>Healthy Hero VR: Dance!</title>
+  <title>Healthy Hero VR: Dance! — V2</title>
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-  <style>
-    body{margin:0;background:#000}
-    .btn{position:fixed;right:12px;bottom:12px;padding:8px 12px;color:#111;background:#fff;border-radius:8px;font-family:system-ui,sans-serif}
-  </style>
+  <style>body{margin:0;background:#000}.btn{position:fixed;right:12px;bottom:12px;padding:10px 14px;color:#111;background:#fff;border-radius:10px;font-family:system-ui,sans-serif}</style>
 </head>
 <body>
-  <a-scene renderer="colorManagement: true" background="color: #0c1220">
+  <a-scene renderer="colorManagement: true" background="color: #070914">
     <a-assets>
       <audio id="bgm" src="assets/song.wav" preload="auto"></audio>
+      <audio id="sfxPerfect" src="assets/perfect.wav" preload="auto"></audio>
+      <audio id="sfxGood" src="assets/good.wav" preload="auto"></audio>
+      <audio id="sfxMiss" src="assets/miss.wav" preload="auto"></audio>
+
       <img id="arrowUpImg" src="assets/arrow_up.png"/>
       <img id="arrowDownImg" src="assets/arrow_down.png"/>
       <img id="arrowLeftImg" src="assets/arrow_left.png"/>
@@ -24,107 +25,89 @@
       <img id="arrowRightOutlineImg" src="assets/arrow_right_outline.png"/>
     </a-assets>
 
-    <!-- Camera + cursor -->
     <a-entity id="rig" position="0 1.6 3">
       <a-camera wasd-controls="acceleration: 25">
-        <a-entity cursor="fuse: true; fuseTimeout: 900"
-                  raycaster="objects: .clickable"
-                  position="0 0 -1"
-                  geometry="primitive: ring; radiusInner: 0.01; radiusOuter: 0.015"
-                  material="color: white; shader: flat"></a-entity>
+        <a-entity id="gaze" cursor="fuse: true; fuseTimeout: 800" raycaster="objects: .clickable" position="0 0 -1" geometry="primitive: ring; radiusInner: 0.01; radiusOuter: 0.016" material="color: #fff; shader: flat"></a-entity>
       </a-camera>
     </a-entity>
 
-    <!-- Lights -->
-    <a-entity light="type: ambient; intensity: 0.8"></a-entity>
-    <a-entity light="type: directional; intensity: 0.5" position="1 3 2"></a-entity>
+    <a-entity light="type: ambient; intensity: 0.9"></a-entity>
+    <a-entity light="type: directional; intensity: 0.45" position="1 3 2"></a-entity>
 
-    <!-- Floor & background -->
-    <a-sky color="#0e1628"></a-sky>
-    <a-entity geometry="primitive: circle; radius: 30" rotation="-90 0 0"
-              material="color: #0a1020; metalness: 0.2; roughness: 0.9"></a-entity>
+    <a-entity id="bg">
+      <a-sky color="#090f1f"></a-sky>
+      <a-entity position="0 0 -3" rotation="-90 0 0">
+        <a-plane width="40" height="40" material="color:#0b1024; opacity:0.95; metalness:0.2; roughness:0.9"></a-plane>
+      </a-entity>
+    </a-entity>
 
-    <!-- Splash -->
-    <a-entity id="ui-splash" visible="true" position="0 1.6 -1.6">
-      <a-plane width="2.0" height="1.1" color="#162235" material="opacity:0.95; depthTest:false; transparent:true"></a-plane>
-      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Healthy Hero VR: Dance!" color="#fff" width="1.8" align="center" position="0 0.35 0.03"></a-text>
-      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Tap or gaze to continue" color="#bcd" width="1.6" align="center" position="0 0.08 0.03"></a-text>
-      <a-plane id="btn-continue" class="clickable" width="1.2" height="0.22" color="#4ade80" position="0 -0.24 0" material="depthTest:false; transparent:true">
-        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="CONTINUE" align="center" color="#063" width="1.0" position="0 0 0.03"></a-text>
+    <a-entity id="ui-splash" visible="true" position="0 1.6 -1.45">
+      <a-plane width="2.2" height="1.2" color="#0b1226" material="opacity:0.92; depthTest:false; transparent:true"></a-plane>
+      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Healthy Hero VR: Dance!" color="#e5e7eb" width="1.9" align="center" position="0 0.34 0.03"></a-text>
+      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Look & tap to continue" color="#b5c3ff" width="1.6" align="center" position="0 0.07 0.03"></a-text>
+      <a-plane id="btn-continue" class="clickable" width="1.3" height="0.26" color="#22c55e" position="0 -0.26 0" material="depthTest:false; transparent:true">
+        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="CONTINUE" align="center" color="#052e16" width="1.0" position="0 0 0.03"></a-text>
       </a-plane>
     </a-entity>
 
-    <!-- Menu -->
-    <a-entity id="ui-menu" visible="false" position="0 1.6 -1.6">
-      <a-plane width="2.2" height="1.3" color="#162235" material="opacity:0.95; depthTest:false; transparent:true"></a-plane>
-      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Dance Game Menu" color="#fff" width="1.8" align="center" position="0 0.45 0.03"></a-text>
-
-      <a-plane id="btn-play" class="" width="1.5" height="0.24" color="#60a5fa" position="0 0.14 0" material="depthTest:false; transparent:true">
-        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Start Game (Timer)" align="center" color="#062" width="1.2" position="0 0 0.03"></a-text>
+    <a-entity id="ui-menu" visible="false" position="0 1.6 -1.45">
+      <a-plane width="2.4" height="1.35" color="#0b1226" material="opacity:0.92; depthTest:false; transparent:true"></a-plane>
+      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Dance Game" color="#e5e7eb" width="2.0" align="center" position="0 0.46 0.03"></a-text>
+      <a-plane id="btn-play" class="" width="1.6" height="0.28" color="#60a5fa" position="0 0.14 0" material="depthTest:false; transparent:true">
+        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Play (Timer Mode)" align="center" color="#032d4a" width="1.2" position="0 0 0.03"></a-text>
       </a-plane>
-      <a-plane id="btn-practice" class="" width="1.5" height="0.24" color="#86efac" position="0 -0.16 0" material="depthTest:false; transparent:true">
-        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Practice Mode (No Timer)" align="center" color="#063" width="1.2" position="0 0 0.03"></a-text>
+      <a-plane id="btn-practice" class="" width="1.6" height="0.28" color="#86efac" position="0 -0.16 0" material="depthTest:false; transparent:true">
+        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Practice (No Timer)" align="center" color="#064e3b" width="1.2" position="0 0 0.03"></a-text>
       </a-plane>
-      <a-plane id="btn-howto" class="" width="1.5" height="0.24" color="#fde68a" position="0 -0.46 0" material="depthTest:false; transparent:true">
+      <a-plane id="btn-howto" class="" width="1.6" height="0.28" color="#fde68a" position="0 -0.46 0" material="depthTest:false; transparent:true">
         <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="How to Play" align="center" color="#6b4005" width="1.2" position="0 0 0.03"></a-text>
       </a-plane>
     </a-entity>
 
-    <!-- How-To -->
-    <a-entity id="ui-howto" visible="false" position="0 1.6 -1.6">
-      <a-plane width="2.2" height="1.3" color="#162235" material="opacity:0.95; depthTest:false; transparent:true"></a-plane>
-      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="How to Play" color="#fff" width="1.8" align="center" position="0 0.45 0.03"></a-text>
-      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Music plays. Arrows fly to target lanes (⬆⬇⬅➡). Look and tap (or pinch) on the matching lane right on beat to score. Keep your combo!" color="#cfe" width="1.9" position="-1.05 0.15 0.03"></a-text>
-      <a-plane id="btn-back-menu" class="" width="1.0" height="0.22" color="#93c5fd" position="0 -0.46 0" material="depthTest:false; transparent:true">
-        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Back" align="center" color="#063" width="0.8" position="0 0 0.03"></a-text>
+    <a-entity id="ui-howto" visible="false" position="0 1.6 -1.45">
+      <a-plane width="2.4" height="1.35" color="#0b1226" material="opacity:0.92; depthTest:false; transparent:true"></></a-plane>
+      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="How to Play" color="#e5e7eb" width="2.0" align="center" position="0 0.46 0.03"></a-text>
+      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Music plays. Colored arrows fly to lanes. Look & tap (or pinch) the matching lane right on beat. Score higher with Perfects!" color="#cfe" width="2.1" position="-1.1 0.14 0.03"></a-text>
+      <a-plane id="btn-back-menu" class="" width="1.1" height="0.26" color="#93c5fd" position="0 -0.46 0" material="depthTest:false; transparent:true">
+        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Back" align="center" color="#062" width="0.9" position="0 0 0.03"></a-text>
       </a-plane>
     </a-entity>
 
-    <!-- HUD -->
     <a-entity id="hud" visible="false">
-      <a-entity id="hud-panel" position="0 2.4 -1.9">
-        <a-plane width="1.8" height="0.3" color="#0b1220" material="opacity:0.8; depthTest:false; transparent:true"></a-plane>
-        <a-text id="hud-left" shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Time: 60" color="#bfe" width="1.0" position="-0.8 0 0.03"></a-text>
-        <a-text id="hud-mid" shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Combo: 0" color="#bfe" width="0.6" align="center" position="0 0 0.03"></a-text>
-        <a-text id="hud-right" shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Score: 0" color="#bfe" width="1.0" align="right" position="0.8 0 0.03"></a-text>
+      <a-entity id="hud-panel" position="0 2.42 -1.85">
+        <a-plane width="2.0" height="0.34" color="#0b1220" material="opacity:0.86; depthTest:false; transparent:true"></a-plane>
+        <a-text id="hud-left" shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Time: 60" color="#c7d2fe" width="1.0" position="-0.9 0 0.03"></a-text>
+        <a-text id="hud-mid" shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Combo: 0" color="#c7d2fe" width="0.6" align="center" position="0 0 0.03"></a-text>
+        <a-text id="hud-right" shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Score: 0" color="#c7d2fe" width="1.0" align="right" position="0.9 0 0.03"></a-text>
       </a-entity>
     </a-entity>
 
-    <!-- Target Lanes -->
     <a-entity id="arena" visible="false" position="0 1.6 -2.6">
-      <!-- Hit zones -->
-      <a-plane id="lane-up" class="lane clickable" width="0.6" height="0.18" color="#13233a" position="0 0.6 0"></a-plane>
-      <a-plane id="lane-left" class="lane clickable" width="0.6" height="0.18" color="#13233a" position="-0.8 0.2 0"></a-plane>
-      <a-plane id="lane-right" class="lane clickable" width="0.6" height="0.18" color="#13233a" position="0.8 0.2 0"></a-plane>
-      <a-plane id="lane-down" class="lane clickable" width="0.6" height="0.18" color="#13233a" position="0 -0.2 0"></a-plane>
+      <a-plane id="lane-up" class="lane clickable" width="0.7" height="0.2" color="#121a34" position="0 0.62 0" material="opacity:0.95"></a-plane>
+      <a-plane id="lane-left" class="lane clickable" width="0.7" height="0.2" color="#121a34" position="-0.9 0.2 0" material="opacity:0.95"></a-plane>
+      <a-plane id="lane-right" class="lane clickable" width="0.7" height="0.2" color="#121a34" position="0.9 0.2 0" material="opacity:0.95"></a-plane>
+      <a-plane id="lane-down" class="lane clickable" width="0.7" height="0.2" color="#121a34" position="0 -0.22 0" material="opacity:0.95"></a-plane>
 
-      <!-- Lane labels (with outline behind) -->
-      <a-image src="#arrowUpOutlineImg" position="0 0.6 0.009" width="0.34" height="0.34" material="depthTest:false; transparent:true"></a-image>
-      <a-image src="#arrowUpImg" position="0 0.6 0.01" width="0.28" height="0.28"></a-image>
+      <a-image src="#arrowUpOutlineImg" position="0 0.62 0.009" width="0.38" height="0.38" material="depthTest:false; transparent:true"></a-image>
+      <a-image src="#arrowUpImg" position="0 0.62 0.01" width="0.32" height="0.32"></a-image>
 
-      <a-image src="#arrowLeftOutlineImg" position="-0.8 0.2 0.009" width="0.34" height="0.34" material="depthTest:false; transparent:true"></a-image>
-      <a-image src="#arrowLeftImg" position="-0.8 0.2 0.01" width="0.28" height="0.28"></a-image>
+      <a-image src="#arrowLeftOutlineImg" position="-0.9 0.2 0.009" width="0.38" height="0.38" material="depthTest:false; transparent:true"></a-image>
+      <a-image src="#arrowLeftImg" position="-0.9 0.2 0.01" width="0.32" height="0.32"></a-image>
 
-      <a-image src="#arrowRightOutlineImg" position="0.8 0.2 0.009" width="0.34" height="0.34" material="depthTest:false; transparent:true"></a-image>
-      <a-image src="#arrowRightImg" position="0.8 0.2 0.01" width="0.28" height="0.28"></a-image>
+      <a-image src="#arrowRightOutlineImg" position="0.9 0.2 0.009" width="0.38" height="0.38" material="depthTest:false; transparent:true"></a-image>
+      <a-image src="#arrowRightImg" position="0.9 0.2 0.01" width="0.32" height="0.32"></a-image>
 
-      <a-image src="#arrowDownOutlineImg" position="0 -0.2 0.009" width="0.34" height="0.34" material="depthTest:false; transparent:true"></a-image>
-      <a-image src="#arrowDownImg" position="0 -0.2 0.01" width="0.28" height="0.28"></a-image>
+      <a-image src="#arrowDownOutlineImg" position="0 -0.22 0.009" width="0.38" height="0.38" material="depthTest:false; transparent:true"></a-image>
+      <a-image src="#arrowDownImg" position="0 -0.22 0.01" width="0.32" height="0.32"></a-image>
 
-      <!-- Spawning root -->
       <a-entity id="spawn-root"></a-entity>
     </a-entity>
 
     <a-entity id="click-handler"></a-entity>
-
-    <!-- WebXR Hand Tracking (if supported by device/browser) -->
     <a-entity id="leftHand"  hand-tracking-controls="hand: left"></a-entity>
     <a-entity id="rightHand" hand-tracking-controls="hand: right"></a-entity>
-
   </a-scene>
-
   <button class="btn" onclick="document.querySelector('a-scene').enterVR()">Enter VR</button>
-
   <script src="./game.js"></script>
 </body>
 </html>
