--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Fitness Adventure VR (WebXR)</title>
+  <title>Fitness Adventure VR — Multi-song + BPM Sync</title>
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
   <style>
-    .ui { position: fixed; left: 12px; bottom: 12px; z-index: 10; font-family: system-ui, Arial; }
-    .ui button, .ui select { padding:10px 14px; margin-right:6px; border-radius:12px; border: none; font-weight:600; box-shadow: 0 2px 8px rgba(0,0,0,.15) }
+    .ui { position: fixed; left: 12px; bottom: 12px; z-index: 10; font-family: system-ui, Arial; display:flex; gap:6px; flex-wrap:wrap }
+    .ui button, .ui select, .ui input{ padding:10px 12px; border-radius:12px; border: none; font-weight:600; box-shadow: 0 2px 8px rgba(0,0,0,.15) }
     .hud { position: fixed; right: 12px; top: 12px; z-index: 10; font-family: system-ui, Arial; background: rgba(0,0,0,.45); color:#fff; padding:10px 14px; border-radius:12px; min-width:200px }
     .hud b { font-size: 18px }
   </style>
@@ -19,8 +19,15 @@
       <option value="assets/beatmap_normal.json">Normal</option>
       <option value="assets/beatmap_hard.json">Hard</option>
     </select>
+    <select id="selectSong">
+      <option value="assets/song_easy.wav" data-bpm="120">Song: Easy (120 BPM)</option>
+      <option value="assets/song_normal.wav" data-bpm="128">Song: Normal (128 BPM)</option>
+      <option value="assets/song_hard.wav" data-bpm="140">Song: Hard (140 BPM)</option>
+    </select>
+    <label>Custom song <input type="file" id="fileSong" accept="audio/*"></label>
     <button id="btnStart">Start</button>
     <button id="btnHow">How to Play</button>
+    <button id="btnPreview">Metronome Preview</button>
   </div>
   <div class="hud" id="hud" hidden>
     <div><b>Fitness Adventure</b></div>
@@ -49,7 +56,7 @@
     <a-entity id="titleBoard" position="0 1.6 -1.8">
       <a-plane width="1.8" height="1" color="#0e1726" opacity="0.95" material="shader: standard; emissive: #0e1726; emissiveIntensity: .4"></a-plane>
       <a-entity text="value: FITNESS ADVENTURE VR; align: center; color: #FFFFFF; width: 2.2"></a-entity>
-      <a-entity position="0 -0.33 0" text="value: Select beat map → Start. Move to dodge, punch targets, raise hands.; align:center; color:#CFE8FF; width: 2.1"></a-entity>
+      <a-entity position="0 -0.33 0" text="value: Select song + beat map → Start. Raise hands, punch, duck; align:center; color:#CFE8FF; width: 2.1"></a-entity>
     </a-entity>
 
     <a-entity id="world"></a-entity>
@@ -60,19 +67,20 @@
 
     <a-entity id="summaryPanel" visible="false" position="0 1.6 -2">
       <a-plane width="1.8" height="1.1" color="#0e1726" opacity="0.95" material="shader: standard; emissive: #0e1726; emissiveIntensity: .3"></a-plane>
-      <a-entity id="sumTitle" position="0 0.3 0" text="value: SUMMARY; align:center; color:#FFFFFF; width: 2.2"></a-entity>
+      <a-entity id="sumTitle" position="0 0.3 0" text="value: SUMMARY; align:center; color: #FFFFFF; width: 2.2"></a-entity>
       <a-entity id="sumStars" position="0 0.05 0" text="value: ★☆☆; align:center; color:#FFD166; width: 2"></a-entity>
       <a-entity id="sumStats" position="0 -0.22 0" text="value: Score: 0 | Time: 60s; align:center; color:#CFE8FF; width: 2"></a-entity>
     </a-entity>
 
     <a-assets>
-      <audio id="sfxPerfect" src="assets/sfxPerfect.wav"></audio>
-      <audio id="sfxGood" src="assets/sfxGood.wav"></audio>
-      <audio id="sfxMiss" src="assets/sfxMiss.wav"></audio>
-      <audio id="bgm" src="assets/bgm.wav"></audio>
+      <audio id="sfxPerfect" src="assets/metronome.wav"></audio>
+      <audio id="sfxGood" src="assets/metronome.wav"></audio>
+      <audio id="sfxMiss" src="assets/metronome.wav"></audio>
+      <audio id="bgm" src="assets/song_easy.wav"></audio>
+      <audio id="metronome" src="assets/metronome.wav"></audio>
     </a-assets>
   </a-scene>
 
-  <script src="game.js"></script>
+  <script src="player.js"></script>
 </body>
 </html>
